styled button spinner

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -196,3 +196,22 @@ span {
     }
   }
 }
+
+.loader {
+  display: flex;
+  border: 2px solid #ffffff;
+  border-top: 2px solid rgba(101, 172, 77, 0.3);
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
