added spinner to button

--- a/src/assets/style/vendor-signup.scss
+++ b/src/assets/style/vendor-signup.scss
@@ -70,10 +70,16 @@
         }
 
         button {
+          display: flex;
+          align-items: center;
           background: var(--cyanBlue);
           border-radius: 5px;
           padding: 0.5rem 2rem;
           margin-top: 1rem;
+
+          span {
+            margin-left: 0.5rem;
+          }
         }
       }
 
