--- a/src/assets/style/home.scss
+++ b/src/assets/style/home.scss
@@ -91,6 +91,25 @@
           margin-left: 0.5rem;
           margin-bottom: 1rem;
         }
+
+        button {
+          align-items: center;
+          margin: auto;
+          background: var(--cyanBlue);
+          border-radius: 5px;
+          padding: 0.5rem 2rem;
+          margin-top: 2rem;
+          margin-bottom: 1rem;
+          transition: all 0.3s;
+
+          span {
+            margin-left: 0.5rem;
+          }
+
+          &:hover {
+            transform: scale(1.05);
+          }
+        }
       }
     }
   }
