--- a/src/assets/style/home.scss
+++ b/src/assets/style/home.scss
@@ -40,14 +40,14 @@
     margin-bottom: 10rem;
 
     .product-item {
+      background: #ffffff;
       margin: 2rem 0.3rem;
       margin-bottom: 0;
       border-radius: 10px;
       transition: all 0.3s;
 
       &:hover {
-        box-shadow: 0 0 5px #99b8e9;
-        transform: scale(0.99);
+        box-shadow: 0 0 5px var(--cyanBlue);
       }
 
       &:hover button {
@@ -90,11 +90,13 @@
         }
 
         .price {
-          font-size: 16px;
-          font-weight: 700;
-          text-align: left;
-          margin-left: 0.5rem;
-          margin-bottom: 1rem;
+          h4 {
+            font-size: 16px;
+            font-weight: 700;
+            text-align: left;
+            margin-left: 0.5rem;
+            margin-bottom: 1rem;
+          }
         }
       }
       button {
@@ -104,7 +106,6 @@
         background: var(--cyanBlue);
         border-radius: 5px;
         padding: 0.5rem 2rem;
-        margin-top: 2rem;
         margin-bottom: 1rem;
         transition: all 0.3s;
 
