--- a/src/assets/style/home.scss
+++ b/src/assets/style/home.scss
@@ -1,4 +1,19 @@
 #home {
+  animation-name: fadeIn;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in-out;
+  animation-duration: 0.8s;
+  animation-fill-mode: forwards;
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
   .top-section {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
@@ -65,10 +80,9 @@
           align-items: flex-end;
 
           img {
-            border-top-left-radius: 10px;
-            border-top-right-radius: 10px;
             margin-bottom: 1rem;
             width: 100%;
+            height: 13rem;
             position: relative;
             object-position: bottom;
             object-fit: contain;
@@ -78,13 +92,13 @@
 
         .product-name {
           text-align: left;
-          margin-left: 0.5rem;
+          margin-left: 0.8rem;
         }
 
         .product-description {
           font-size: 14px;
           text-align: left;
-          margin: 0.3rem 0 0.5rem 0.5rem;
+          margin: 0.3rem 0.8rem 0.8rem 0.8rem;
           height: 2rem;
           opacity: 0.7;
         }
@@ -94,12 +108,13 @@
             font-size: 16px;
             font-weight: 700;
             text-align: left;
-            margin-left: 0.5rem;
-            margin-bottom: 1rem;
+            margin-left: 0.8rem;
+            margin-bottom: 1.5rem;
           }
         }
       }
       button {
+        display: flex;
         visibility: hidden;
         align-items: center;
         margin: auto;
@@ -110,6 +125,8 @@
         transition: all 0.3s;
 
         span {
+          position: absolute;
+          right: 0.5rem;
           margin-left: 0.5rem;
         }
 
