--- a/src/assets/style/vendor-signup.scss
+++ b/src/assets/style/vendor-signup.scss
@@ -1,4 +1,19 @@
 #vendor-signup {
+  animation-name: fadeIn;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in-out;
+  animation-duration: 0.8s;
+  animation-fill-mode: forwards;
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
   .form-container {
     max-width: 50%;
     margin: auto;
